Fix featured article font too big on small device

--- a/owen/static/css/owen.css
+++ b/owen/static/css/owen.css
@@ -323,7 +323,12 @@ footer .nav a {
 }
 footer .nav > li > a:hover {
     background-color: transparent;
-    color: #DF3331;}
+    color: #DF3331;
+}
 footer div {
     text-align: center;
+}
+
+@media (max-width: 767px) {
+    .featured-article .article-header {font-size: 36px;}
 }
